// Protobuf/Capacity.proto
syntax = "proto3";

message Capacity {
  int32 server_id = 1;           // Sunucu ID'si (1, 2 veya 3)
  int32 server_status = 2;       // Sunucunun doluluk durumu (abone say覺s覺)
  int64 timestamp = 3;           // Zaman damgas覺 (UNIX zaman damgas覺)
}